--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:windowSoftInputMode="adjustNothing"
-        android:configChanges="orientation|keyboardHidden"
+        android:windowSoftInputMode="adjustResize"
+        android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
