--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:windowSoftInputMode="adjustResize"
+        android:windowSoftInputMode="adjustPan|adjustResize"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -17,5 +17,6 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
+
+
