--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:windowSoftInputMode="adjustPan|adjustResize"
+        android:windowSoftInputMode="stateUnchanged|adjustResize"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
