--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:windowSoftInputMode="stateUnchanged|adjustResize"
+        android:windowSoftInputMode="stateUnchanged|stateHidden|adjustPan|adjustResize"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/AppTheme">
+        <!-- android:configChanges="orientation"  WHY THIS DOES NOT PRESERVE KEEPING $quiz VALUES WHEN CHANGING DEVICE ORIENTATION ?????-->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
